# LargeCorporaTranslation

./: .gitignore  Dockerfile  Dockerfile.ngc  Makefile  README.md  benchmark_all_models.py  config.yaml  config_baseline.yaml  config_dp.yaml  config_dp_nocompile.yaml  index.html  pyproject.toml  requirements-cuda.txt  requirements-mps.txt  requirements.txt  run.sh  setup.sh  sync_from_h200.sh  sync_to_h200.sh
.claude/: settings.local.json.tmp
.github/: docker-compose.obs.yaml
.github/grafana/: dashboard.json  provisioning.yaml
.github/prometheus/: prometheus.yml
.github/workflows/: ci.yml
benchmark/: __init__.py  __main__.py  fix_qat.py  qat_loader.py  run_models.py
benchmark/config/: __init__.py  capability.py  constants.py  model_presets.py  reference.yaml  schema.py
benchmark/data/: __init__.py  chunker.py  filters.py  loader.py  parallel_gz.py  pipeline.py  pretokenizer.py
benchmark/hardware/: __init__.py  architecture.py  backend.py  cuda_graphs.py  fused_ops.py  jit_compiler.py  kv_cache_quant.py  parallelism.py  precision.py  triton_kernels_fused.py  trt_builder.py  vocabulary_pruning.py
benchmark/inference/: __init__.py  batch_assembly.py  batch_tuner.py  continuous_batcher.py  engine.py  paged_attention.py  sampling.py  speculative.py
benchmark/inference/backends/: __init__.py  autoregressive.py  autoregressive_cuda.py  autoregressive_mps.py  custom_plugin.py  data_parallel.py  diffusion.py  nllb.py  nllb_cuda.py  nllb_mps.py  protocol.py  registry.py  tensorrt_backend.py  vllm.py
benchmark/metrics/: __init__.py  batch_logger.py  collector.py  gpu_sampler.py  system_sampler.py  throughput.py
benchmark/observability/: __init__.py  dashboard.py  nsight_profiler.py  perf_regression.py  prometheus_metrics.py  server.py
benchmark/orchestration/: __init__.py  checkpoint.py  harness.py  signals.py
benchmark/quality/: __init__.py  benchmark.py  confidence.py  ensemble.py  metrics_bertscore.py  metrics_bleu.py  metrics_chrf.py  metrics_comet.py  metrics_metricx.py  metrics_xcomet.py  references.py  significance.py
benchmark/quantization/: __init__.py  qat.py  smoothquant.py
benchmark/reporting/: __init__.py  aggregator.py  degradation.py  extrapolation.py  json_report.py  markdown_report.py
benchmark/utils/: __init__.py  env_check.py  helpers.py  json_utils.py  logging_setup.py  print_summary.py  timer.py  version.py
benchmarks/: run_new_models.py  run_new_models.sh
data/output/: all_benchmark_results.csv  model_comparison.json  result_nllb_1.3b.json  result_nllb_3.3b.json  result_nllb_600m.json  result_translategemma.json
data/output/model_selection/: human_eval_data.json  metrics.json  references.jsonl  source_sentences.json  translations.json
data/references/: golden_en_tr.jsonl
docs/: AI_CODING_ANTIPATTERNS.md  ARCHITECTURAL_FLAWS.md  ARCHITECTURE.md  COMPILATION_GUIDE.md  DEVELOPMENT.md  EVALUATION_PIPELINE.md  FP8_TE_CUDA_ISSUES.md  LANGUAGE_EVALUATION_STUDY.md  MEASUREMENT_PLAN.md  PRD.md  PRETOKENIZATION_PLAN.md  QUALITY_METRICS_RESEARCH.md  README.md  SDD.md  SRS.md  STATIC_FP8_QUANTIZATION.md
docs/PRD&SDD&SRS/: PRD.md  SDD.md  SRS.md
docs/Research/: 200K_TPS_FEASIBILITY.md  LANGUAGE_EVALUATION_STUDY.md  QUALITY_ASSESSMENT.md  QUALITY_METRICS_RESEARCH.md
docs/latex/: TR_Corpus_Benchmark_Technical_Report.tex
examples/: example_echo_plugin.py
output/: runtime_config_20260624_071902.yaml
output/2026-06-24_20-32-18/checkpoints/: checkpoint_20260624_203417.json  checkpoint_20260624_203548.json  checkpoint_20260624_203644.json
output/2026-06-24_20-32-18/report/: benchmark_report.json  benchmark_report.md
output/2026-06-25_11-57-31/report/: benchmark_report.json  (+1 more)
quantization/: __init__.py  qat.py  smoothquant.py
scripts/: bench_compile_test.sh  bench_format.py  bench_full.py  bench_ngc.py  bench_nllb.py  bench_no_compile_test.sh  benchmark_all_models.py  benchmark_models.py  benchmark_scientific_tps.py  benchmark_single.py  debug_cb.py  final_test.py  launch-llama-server.sh  launch_llama_server.sh  measure_degradation.py  measure_gpu1.py  measure_medium.py  measure_quick.py  ngc_run.sh  run_all_models.sh  run_e2e_benchmark.py  run_models.py  run_new_models.py  run_new_models.sh  run_nllb.py  run_one_model.py  select_sentences.py  test_compile.py  test_spec.py  tune_weights.py
scripts/evaluation/: build_data.py  eval_bf16_vs_fp8.py  evaluate.py  generate_references.py  index.html  run_metrics.py  select_sentences.py  translate_sentences.py  tune_weights.py
tests/: __init__.py  conftest.py  test_antipatterns.py  test_backend.py  test_batch_assembly.py  test_checkpoint.py  test_chunker.py  test_config.py  test_coverage_gaps.py  test_e2e.py  test_e2e_correctness.py  test_extrapolation.py  test_filters.py  test_integration_real.py  test_loader.py  test_nllb.py  test_paged_cache.py  test_parallelism.py  test_pipeline_e2e.py  test_precision.py  test_pretokenizer.py  test_quality_real.py  test_references.py  test_safe_mode.py  test_sampling.py  test_speculative.py  test_throughput.py  test_timer.py  test_tokenizer_e2e.py
tests/fixtures/: config_test.yaml  golden_en_tr.jsonl  sample_input.jsonl
tools/: clean_autoregressive.py  kill_jit_compiler.py  kill_kv_cache_quant.py
(+404 files in other folders)
