[build-system]
requires = ["setuptools>=68.0,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tr-corpus-benchmark"
version = "3.6"
description = "Turkish Corpus Translation Benchmark Harness — TranslateGemma 12B Feasibility Study"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Benchmark Team" }]

# NOTE: All version pins use >= for development flexibility.
# For production reproducibility, replace >= pins with == pins
# and use a lockfile (e.g., pip freeze > requirements.txt).
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.47.0",
    "psutil>=5.9.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "sacrebleu>=2.4.0",
    "unbabel-comet>=2.2.0",
    "numpy>=1.26.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "orjson>=3.10.0",
    "tokenizers>=0.20.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
cuda = [
    # flash-attn is installed separately by setup.sh with --no-build-isolation
    # because it requires torch at build time and pip's default build isolation
    # sandbox does not include the already-installed torch.  Do NOT add it here.
    # https://github.com/Dao-AILab/flash-attention?tab=readme-ov-file#installation-and-features
    "transformer-engine>=2.0.0",
    "pynvml>=11.550",
    "triton>=2.3.0",
]
tensorrt = [
    "tensorrt>=10.0.0",
    "tensorrt-cu12>=10.0.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
]
mps = [
    "mlx>=0.18.0",
    "mlx-lm>=0.18.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "black>=24.0",
    "ruff>=0.3.0",
]

[project.entry-points."console_scripts"]
tr-benchmark = "benchmark.__main__:main"

[tool.setuptools.packages.find]
include = ["benchmark*"]
